# rustlogistics

./: CMakeLists.txt  Readme.MD  app.c  cargo.toml  main.rs
app/: bd.c  bd.rs  config.h  estatisticas.c  estatisticas.rs  login.c  login.rs  menus.c  menus.rs
doc/: boas_praticas.MD
generics/: demo.rs  lista_dupla.c  lista_simples.rs
include/: bd.h  cadastros.h  generics.md  lista_dupla.h  login.h  visual.h
lib/: fractal.rs  visual.c  visual.rs
modules/: alunos.rs  cadastros.c  cadastros.rs  cargas.c  clientes.c  entregas.c  produtos.c  produtos.rs  vendas.c
